# vonNeumann

./: AUTHORS  Makefile.am  Makefile.in  README.md  THANKS  bootstrap.sh  config.h.in  configure  configure.ac  reconf  vonNeumann-config  vonNeumann-config.in  vonNeumann.pc  vonNeumann.pc.in
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  alloc_system.c  alloc_system.h  cascades.c  cascades.h  file_wrapper.c  file_wrapper.h  fluxes.c  fluxes.h  gauss.c  gauss.h  locked_r.c  locked_r.h  metabolites.c  metabolites.h  minover.c  minover.h  optimal_flux.c  optimal_flux.h  parse_file.c  parse_file.h  remove_r.c  remove_r.h  sign.c  sign.h  substring.c  substring.h  vN_io.c  vN_io.h  vonNeumann.h
vonNeumann/: Makefile.am  Makefile.in  vonNeumann_main.c
