lib_LTLIBRARIES = libvonNeumann.la
pkginclude_HEADERS = vonNeumann.h
libvonNeumann_la_SOURCES = alloc_system.c alloc_system.h\
                            cascades.c cascades.h\
                            file_wrapper.c file_wrapper.h\
                            fluxes.c fluxes.h\
                            gauss.c gauss.h\
                            locked_r.c locked_r.h\
                            metabolites.c metabolites.h\
                            minover.c minover.h\
                            optimal_flux.c optimal_flux.h\
                            parse_file.c parse_file.h\
                            remove_r.c remove_r.h\
                            sign.c sign.h\
                            substring.c substring.h\
                            vN_io.c vN_io.h



